# orgToRem

./: .gitignore  Makefile  README.md  hie.yaml  orgToRem.cabal  stack.yaml
el/: orgToRem.el
hs/: Main.hs
tex/: agenda.tex  suspended.tex
