name:                orgToRem
version:             0.1.0.0
homepage:            https://github.com/m4lvin/orgToRem#readme
license:             GPL-2
license-file:        LICENSE
author:              Malvin Gattinger
maintainer:          malvin@w4eg.eu
copyright:           2022 Malvin Gattinger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable orgToRem
  hs-source-dirs:      hs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , vector
                     , text
                     , bytestring
                     , time
                     , utf8-string
